# backend_eng_assignment

./: .dockerignore  .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
app/: auth.py  logging.py  models.py  permissions.py  policy_engine.py  urls.py
app/api/: health.py
app/api/v1/: access_check.py  auth.py  resource_policies.py  resources.py  router.py  workspace_users.py  workspaces.py
app/infrastructure/: __init__.py  database.py
app/infrastructure/repositories/: __init__.py  (+4 more)
app/middleware/: logging.py
app/migrations/: README  env.py
app/models/: __init__.py  base.py  effective_policy.py  policy.py  resource.py  user.py  workspace.py
app/schemas/: __init__.py  access_check.py  auth.py  common.py  policy.py  resource.py  user.py  validators.py  workspace.py
app/services/: __init__.py  access_check_service.py  policy_service.py  resource_service.py  user_service.py  workspace_service.py
config/: settings.py
scripts/: run-integration-tests.sh
tests/: conftest.py  test_access_check.py  test_policies.py  test_resources.py  test_workspaces.py
tests/api/: test_schemathesis.py
tests/auth/: test_access_check.py
tests/infrastructure/: test_isolation.py  test_model_cascades.py  test_policies.py  test_resources.py  test_users.py
tests/integration/: conftest.py  test_database_constraints.py
tests/property/: test_api_workflow_properties.py  test_auth_token_properties.py  test_policy_engine_properties.py  test_request_schema_properties.py  test_schema_validator_properties.py
(+5 files in other folders)
