[project]
name = "backend-eng-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.9",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "schemathesis>=4.19.0",
]

[tool.pytest.ini_options]
addopts = "--cov=app --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "app/migrations/*",
]
